[package]
name = "sni-per"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
dirs = "5.0.1"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = { version = "1.37.0", features = ["full"] }
